# Oxide

./: 2021_3A_IABD1_linear_model_demo.ipynb  Notebook___CAS_DE_TESTS.ipynb  README.md  Rapport_PA.docx  lib.rs  main.py  ruster.py
application/: index.html
module/: bing-downloader.py  downloader.py
module/.ipynb_checkpoints/: Notebook___CAS_DE_TESTS-checkpoint.ipynb
module/macros/: 0.ipynb  16px_Grayscale-Copy1.ipynb  16px_Grayscale.ipynb  16px_RGB.ipynb  32px_Grayscale.ipynb  8px_Grayscale-Copy1.ipynb  8px_Grayscale.ipynb  8px_Grayscale_Linear_Palladian.ipynb  8px_Grayscale_RBF_Clusters_Asian.ipynb  8px_Grayscale_RBF_Clusters_Modern.ipynb  8px_Grayscale_RBF_Naïf_Modern.ipynb  8px_Grayscale_RBF_Naïf_Palladian.ipynb  8px_RGB-Copy1.ipynb  8px_RGB_Linear_Asian.ipynb  8px_RGB_Linear_Modern-.ipynb  8px_RGB_Linear_Palladian.ipynb  8px_RGB_RBF_Clusters_Asian-Copy1.ipynb  8px_RGB_RBF_Clusters_Modern-Copy1.ipynb  8px_RGB_RBF_Clusters_Palladian-Copy1.ipynb  8px_RGB_RBF_Naïf_Asian-Copy1.ipynb  8px_RGB_RBF_Naïf_Modern-Copy1.ipynb  8px_RGB_RBF_Naïf_Palladian-Copy1.ipynb  img.py  img_driver.py  img_main.py  neural_test.py  ruster_linear.py  ruster_neural.py  ruster_rbf.py
notebooks/: 2021_3A_IABD1_linear_model_demo.ipynb  Notebook___CAS_DE_TESTS.ipynb  main.py  ruster.py
notebooks/.ipynb_checkpoints/: Notebook___CAS_DE_TESTS-checkpoint.ipynb
notebooks/linear/: ruster.py
notebooks/neural/: 1.json  CAS_DE_TESTS_Neural.ipynb  Neural_CAS_DE_TESTS.ipynb  ruster.py
rust/PerceptronLib/: Cargo.toml
rust/PerceptronLib/src/: lib.rs  linear.rs  neural_net.rs  rbf.rs
(+73 files in other folders)
