[package]
name = "PerceptronLib"
version = "0.1.0"
authors = ["Romain Blazevic <romain.blazevic@gmail.com>"]
edition = "2018"

[lib]
crate-type=['cdylib']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
#ndarray = "0.14.0"
#ndarray-linalg = { version="0.13.1", features=['intel-mkl']}
